<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AddTreasureActivity">

        <TextView
            style="@style/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/addTreasure"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasureName"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasureName"
                style="@style/modifiedEditProfileText"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasureDescription"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasureDescription"
                style="@style/modifiedEditProfileText"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasureHint"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasureHint"
                style="@style/modifiedEditProfileText"
                android:hint="@string/treasureHint"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasureQuestion"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasureQuestion"
                style="@style/modifiedEditProfileText"
                android:hint="@string/treasureQuestion"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasurePoints"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasurePoints"
                style="@style/modifiedEditProfileText"
                android:hint="@string/numberOfPoints"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/add3DObject"
                android:textSize="18sp"></TextView>

            <ImageButton
                android:id="@+id/imgBtnAdd3DObject"
                android:layout_width="68dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:background="#E6D1CECE"
                android:scaleType="centerInside"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelTreasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/Cancel"
                app:backgroundTint="#DF6969" />

            <Button
                android:id="@+id/btnAddTreasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="185dp"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/add"
                app:backgroundTint="#00BCD4" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>