<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="@string/editProfile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFirstName"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editProfileTextFirstName"
            style="@style/modifiedEditProfileText"
            android:hint="@string/login_Firstname_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLastName"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editProfileTextLastName"
            style="@style/modifiedEditProfileText"
            android:hint="@string/login_Lastname_hint"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPhoneNumber"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <EditText
            android:id="@+id/editProfileTextPhoneNumber"
            style="@style/modifiedEditProfileText"
            android:hint="@string/login_mobile_number_hint"
            android:inputType="phone"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/uploadPicProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imgViewProfileTakeAPhoto"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_text_margin_top">

        <Button
            android:id="@+id/btnEditProfileCancel"
            style="@style/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/Cancel"
            app:backgroundTint="#E36565" />

        <Button
            android:id="@+id/btnEditProfileSave"
            style="@style/loginButton"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/Save"
            app:backgroundTint="#47E8C8" />
    </LinearLayout>


</LinearLayout>