<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTreasureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTreasureName_edit_treasure"
        style="@style/loginHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:foregroundGravity="right|center_horizontal"
        android:gravity="center"
        android:text="Treasure Name"
        android:textColor="@color/sand" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasureDescription_edit_treasure"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasureDescription_edit_treasure"
                style="@style/modifiedEditProfileText"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasureHint_edit_treasure"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasureHint_edit_treasure"
                style="@style/modifiedEditProfileText"
                android:hint="@string/treasureHint"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasureQuestion_edit_treasure"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasureQuestion_edit_treasure"
                style="@style/modifiedEditProfileText"
                android:hint="@string/treasureQuestion"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasureAnswer_edit_treasure"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasureAnswer_edit_treasure"
                style="@style/modifiedEditProfileText"
                android:hint="@string/treasureAnswer"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTreasurePoints_edit_treasure"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextTreasurePoints_edit_treasure"
                style="@style/modifiedEditProfileText"
                android:hint="@string/numberOfPoints"
                android:inputType="number"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/edit3DObject"
                android:textSize="18sp"
                android:textColor="@color/sand" ></TextView>

            <ImageButton
                android:id="@+id/imgBtnEdit3DObject_edit_treasure"
                android:layout_width="68dp"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:background="#E6D1CECE"
                android:scaleType="centerInside"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelEditTreasure_edit_treasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="6dp"
            android:insetRight="6dp"
            android:text="@string/Cancel"
            app:backgroundTint="@color/x_red" />

        <Button
            android:id="@+id/btnSaveEditTreasure_edit_treasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="6dp"
            android:insetRight="6dp"
            android:text="@string/Save"
            app:backgroundTint="@color/sand" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>